--- a/cv-project/public/styles/style.css
+++ b/cv-project/public/styles/style.css
@@ -14,10 +14,11 @@
 }
 
 .App {
-  width: 900px;
+  width: 850px;
   margin: 20px;
-  height: 100%;
+  /* height: 95%; */
   box-shadow: 1px 2px 6px #333333;
+  background-color: white;
 }
 
 /* Header */
@@ -119,4 +120,124 @@ p {
 
 .education-container {
   margin-bottom: 30px;
+}
+
+/* Forms */
+
+/* Personal Info */
+#pesonal-info-form-container {
+  padding: 40px 40px 0 40px;
+}
+
+#pesonal-info-form-container form {
+  margin: 10px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+#pesonal-info-form-container input {
+  padding: 10px;
+  margin: 5px 0;
+  width: 45%;
+  border: 1px solid lightgray;
+  border-radius: 2px;
+  outline: none;
+}
+
+/* Resume Objective */
+
+#resume-obj-container {
+  padding: 0 40px;
+}
+
+#resume-obj-container textarea {
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid lightgray;
+  border-radius: 2px;
+  width: 97%;
+  height: 50px;
+  resize: none;
+  outline: none;
+}
+
+/* Experience */
+
+#experience-container {
+  padding: 0 40px 20px 40px;
+}
+
+#experience-container form {
+  margin: 10px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.experience-fields {
+  padding: 10px;
+  margin: 5px 0;
+  width: 45%;
+  border: 1px solid lightgray;
+  border-radius: 2px;
+  outline: none;
+}
+
+#add-activities-container {
+  /* border: 1px solid black; */
+  padding: 10px;
+  margin: 5px 0;
+  width: 45%;
+  text-align: center;
+  background-color: #eeeeee;
+  color: #333333;
+  cursor: pointer;
+  border-radius: 2px;
+}
+
+.fa-plus {
+  margin-right: 5px;
+}
+
+#add-experience-button {
+  padding: 10px;
+  margin: 5px 0;
+  color: white;
+  background-color: #0e2f44;
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
+/* Education */
+
+#education-container {
+  padding: 0 40px;
+}
+
+#education-container form {
+  margin: 10px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+#education-container input {
+  padding: 10px;
+  margin: 5px 0;
+  width: 45%;
+  border: 1px solid lightgray;
+  border-radius: 2px;
+  outline: none;
+}
+
+#add-education-button {
+  padding: 10px;
+  margin: 5px 0;
+  color: white;
+  background-color: #0e2f44;
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
 }
