--- a/cv-project/public/styles/style.css
+++ b/cv-project/public/styles/style.css
@@ -150,10 +150,19 @@ p {
   justify-content: space-between;
 }
 
-#pesonal-info-form-container input {
+.persona-info-input {
   padding: 10px;
   margin: 5px 0;
   width: 45%;
+  border: 1px solid lightgray;
+  border-radius: 2px;
+  outline: none;
+}
+
+#persona-info-title {
+  width: 100%;
+  padding: 10px;
+  margin: 5px 0;
   border: 1px solid lightgray;
   border-radius: 2px;
   outline: none;
