--- a/cv-project/public/styles/style.css
+++ b/cv-project/public/styles/style.css
@@ -400,7 +400,6 @@ p {
 }
 
 #submit {
-  background-color: #0e2f44;
   padding: 10px 20px;
   margin: 40px;
   color: white;
@@ -408,4 +407,38 @@ p {
   border: none;
   border-radius: 2px;
   cursor: pointer;
+}
+
+/* Buttons */
+.cancel {
+  margin-left: 10px;
+  background-color: lightgray;
+  padding: 10px 20px;
+  color: white;
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
+  outline: none;
+}
+
+.cancel:hover {
+  opacity: 0.8;
+}
+
+.edit {
+  position: absolute;
+  padding: 10px;
+  right: 450px;
+  top: 20px;
+  border: none;
+  border-radius: 50%;
+  background-color: lightgray;
+  cursor: pointer;
+  font-size: 16px;
+  color: black;
+  outline: none;
+}
+
+.edit:hover {
+  opacity: 0.8;
 }
