--- a/cv-project/public/styles/style.css
+++ b/cv-project/public/styles/style.css
@@ -113,13 +113,13 @@
   margin-right: 15px;
 }
 
-#skills-container {
+/* #skills-container {
   margin-bottom: 30px;
 }
 
 #skills-container li {
   margin: 5px 20px;
-}
+} */
 
 .education-container h3,
 p {
